--- a/stuuf/-dev-beta/index.html
+++ b/stuuf/-dev-beta/index.html
@@ -4,60 +4,86 @@
 <head>
   <style>
     body {
-      font-family: 'AvenirNext';
+      font-family: 'BeatsByDre';
     }
   </style>
-  <meta charset='utf-8'>
-  <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-  <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/stylesheet.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/github-dark.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/print.css" media="print">
+  <title> Some Stuuf </title>
+  <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/cydia.css" />
   <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/fonts.css" />
-
-
-  <title>  dev beta </title>
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <script type="text/javascript" src="https://mwoolweaver.us/js/cydia.js"></script>
 </head>
 
-<body>
-  <center>
-    <h2>  dev beta </h2>
+<body class="pinstripe">
+  <label><a href="https://mwoolweaver.us/stuuf/-dev-beta/" style="text-decoration: none">  Dev Betas </a></label>
+  <panel>
+    <label><a href="https://mwoolweaver.us/stuuf/-dev-beta/iOS/" style="text-decoration: none"> iOS </a></label>
+    <fieldset>
+      <div>
+        <p>
+          <a href="https://mwoolweaver.us/stuuf/-dev-beta/iOS/iOS_11_Beta_Profile.mobileconfig" style="text-decoration: none"> iOS_11_Beta_Profile.mobileconfig </a>
+        </p>
+      </div>
+      <div>
+        <p>
+          <a href="https://mwoolweaver.us/stuuf/-dev-beta/iOS/iOS_10_Beta_Profile.mobileconfig" style="text-decoration: none"> iOS_10_Beta_Profile.mobileconfig </a>
+        </p>
+      </div>
+    </fieldset>
+    
+    <label><a href="https://mwoolweaver.us/stuuf/-dev-beta/macOS/" style="text-decoration: none"> macOS </a></label>
+    <fieldset>
+      <div>
+        <p>
+          <a href="https://mwoolweaver.us/stuuf/-dev-beta/macOS/macOS_High_Sierra_Developer_Beta_Access_Utility.dmg" style="text-decoration: none"> macOS_High_Sierra_Beta_Access_Utility.dmg </a>
+        </p>
+      </div>
+      <div>
+        <p>
+          <a href="https://mwoolweaver.us/stuuf/-dev-beta/macOS/macOS_Sierra_Developer_Beta_Access_Utility.dmg" style="text-decoration: none"> macOS_Sierra_Beta_Access_Utility.dmg </a>
+        </p>
+      </div>
+    </fieldset>
+    
+    <label><a href="https://mwoolweaver.us/stuuf/-dev-beta/watchOS/" style="text-decoration: none"> watchOS </a></label>
+    <fieldset>
+      <div>
+        <p>
+          <a href="https://mwoolweaver.us/stuuf/-dev-beta/watchOS/watchOS_4_Beta_Profile.mobileconfig" style="text-decoration: none"> watchOS_4_Beta_Profile.mobileconfig </a>
+        </p>
+      </div>
+      <div>
+        <p>
+          <a href="https://mwoolweaver.us/stuuf/-dev-beta/watchOS/watchOS_3_Beta_Profile.mobileconfig" style="text-decoration: none"> watchOS_3_Beta_Profile.mobileconfig </a>
+        </p>
+      </div>
+    </fieldset>
 
-    <h3> iOS </h3>
+    <label><a href="https://mwoolweaver.us/stuuf/-dev-beta/tvOS/" style="text-decoration: none"> tvOS </a></label>
+    <fieldset>
+      <div>
+        <p>
+          <a href="https://mwoolweaver.us/stuuf/-dev-beta/tvOS/tvOS_11_Beta_Profile.mobileconfig" style="text-decoration: none"> tvOS_11_Beta_Profile.mobileconfig </a>
+        </p>
+      </div>
+      <div>
+        <p>
+          <a href="https://mwoolweaver.us/stuuf/-dev-beta/tvOS/tvOS_10_Beta_Profile.mobileconfig" style="text-decoration: none"> tvOS_10_Beta_Profile.mobileconfig </a>
+        </p>
+      </div>
+    </fieldset>
 
-    <a href="https://mwoolweaver.us/stuuf/-dev-beta/iOS/iOS_11_Beta_Profile.mobileconfig" style="text-decoration: none"> iOS_11_Beta_Profile.mobileconfig </a>
-    <br>
-    <a href="https://mwoolweaver.us/stuuf/-dev-beta/iOS/iOS_10_Beta_Profile.mobileconfig" style="text-decoration: none"> iOS_10_Beta_Profile.mobileconfig </a>
 
-    <br>
-    <br>
-
-    <h3> macOS </h3>
-
-    <a href="https://mwoolweaver.us/stuuf/-dev-beta/macOS/macOS_High_Sierra_Developer_Beta_Access_Utility.dmg" style="text-decoration: none"> macOS_High_Sierra_Beta_Access_Utility.dmg </a>
-    <br>
-    <a href="https://mwoolweaver.us/stuuf/-dev-beta/macOS/macOS_Sierra_Developer_Beta_Access_Utility.dmg" style="text-decoration: none"> macOS_Sierra_Beta_Access_Utility.dmg </a>
-
-    <br>
-    <br>
-
-    <h3> watchOS </h3>
-
-    <a href="https://mwoolweaver.us/stuuf/-dev-beta/watchOS/watchOS_4_Beta_Profile.mobileconfig" style="text-decoration: none"> watchOS_4_Beta_Profile.mobileconfig </a>
-    <br>
-    <a href="https://mwoolweaver.us/stuuf/-dev-beta/watchOS/watchOS_3_Beta_Profile.mobileconfig" style="text-decoration: none"> watchOS_3_Beta_Profile.mobileconfig </a>
-
-    <br>
-    <br>
-
-    <h3> tvOS </h3>
-
-    <a href="https://mwoolweaver.us/stuuf/-dev-beta/tvOS/tvOS_11_Beta_Profile.mobileconfig" style="text-decoration: none"> tvOS_11_Beta_Profile.mobileconfig </a>
-    <br>
-    <a href="https://mwoolweaver.us/stuuf/-dev-beta/tvOS/tvOS_10_Beta_Profile.mobileconfig" style="text-decoration: none"> tvOS_10_Beta_Profile.mobileconfig </a>
-
-    <br>
-  </center>
+    <label> Links </label>
+    <fieldset>
+      <a href="https://twitter.com/mwoolweaver">
+              <img class="icon" src="https://mwoolweaver.us/img/twitter.png" width="58" height="58">
+              <div><div><label><p>
+                    @mwoolweaver on Twitter
+              </p></label></div></div>
+            </a>
+    </fieldset>
+  </panel>
 </body>
 
 </html>
