--- a/resume/index.html
+++ b/resume/index.html
@@ -1,6 +1,7 @@
 <html>
-   <!--- <embed src="./Michael_Woolweaver_04-2019.pdf" width="" height=""  alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+    <embed src="./Michael_Woolweaver_04-2019.pdf" width=100% height=100%  alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+
+   <!--<iframe width=100% height=100% src="Michael_Woolweaver_04-2019.pdf" frameborder="0" allowfullscreen scrolling="no"> </iframe>
 -->
 
-   <iframe width=100% height=100% src="Michael_Woolweaver_04-2019.pdf" frameborder="0" allowfullscreen scrolling="no"> </iframe>
 </html>
