--- a/beta/index.html
+++ b/beta/index.html
@@ -2,23 +2,23 @@
 <html>
 <body>
 
-<h2>Apple OS dev beta</h2>
+<h2>  dev beta</h2>
 
 <table style="width:100%">
   <tr>
-    <td> <a href="https://michael.woolweaver.bid/beta/iOS_14_Beta_Profile.mobileconfig"> iOS 14 </a> </td> 
+    <td> <a href="https://michael.woolweaver.bid/iOS_14_Beta_Profile.mobileconfig"> iOS 14 </a> </td> 
   </tr>
   <tr>
-    <td> <a href="https://michael.woolweaver.bid/beta/iOS_iPadOS_14_Beta_Profile.mobileconfig"> iPadOS 14 </a> </td>
+    <td> <a href="https://michael.woolweaver.bid/iOS_iPadOS_14_Beta_Profile.mobileconfig"> iPadOS 14 </a> </td>
   </tr>
   <tr>
-    <td> <a href="https://michael.woolweaver.bid/beta/watchOS_7_Beta_Profilemobileconfig.mobileconfig"> watchOS 7 </a> </td>
+    <td> <a href="https://michael.woolweaver.bid/watchOS_7_Beta_Profilemobileconfig.mobileconfig"> watchOS 7 </a> </td>
   </tr>
   <tr>
-  	<td> <a href="https://michael.woolweaver.bid/beta/tvOS_14_Beta_Profile.mobileconfig"> tvOS 14 </a> </td>
+  	<td> <a href="https://michael.woolweaver.bid/tvOS_14_Beta_Profile.mobileconfig"> tvOS 14 </a> </td>
   </tr>
   <tr>
-  	<td> <a href="https://michael.woolweaver.bid/beta/macOSDeveloperBetaAccessUtility.dmg"> macOS 11 </a> </td>
+  	<td> <a href="https://michael.woolweaver.bid/macOSDeveloperBetaAccessUtility.dmg"> macOS 11 </a> </td>
   </tr>
 </table>
 
